k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gripss-webserver-service
spec:
  selector:
    app: gripss-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
